# boggart

./: .dockerignore  .gitignore  Dockerfile  README.md  access.py  boggart.py  create_db.py  discordgpt.py  docker-compose-minio.yaml  docker-compose.yaml  docker-compose.yml  fix_implementation.md  key_schema.json  pyproject.toml  requirements.txt  sqlc.yml
.github/: ci.yaml
.github/workflows/: ci.yaml
ansible/: build-bot.yaml  clean-secrets.yaml  create-secrets.yaml  deploy.yaml  kill_pod.yaml
app/: .dockerignore  Dockerfile  boggart.py  requirements.txt
app/discordgpt/: Database.py  ImageGenerator.py  KeyLoader.py
boggart/: Dockerfile  ImageGenerator.py  core.py  db.py  image_generator.py  llm_brain.py  main.py  models.py  requirements.txt
bot/: .dockerignore  Dockerfile
bot/boggart/: ImageGenerator.py  boggart.py
bot/src/: boggart.py
bot/src/discordgpt/: ImageGenerator.py
config/: logging.yaml
database/: Dockerfile  create_tables.sql  get_user_images.sql  set_vars.sh
db/: create_tables.sql
discordgpt/: Bloggert.py  Database.py  ImageGenerator.py  KeyLoader.py  __init__.py
discordgpt/config/: schema.json
docker/: docker-compose.yaml
docs/: README.md  bot_setup.md  environment.md
env/: boggart.env  pgadmin.env  postgres.env
example/: env
prompt_templates/: safety_system.yml.j2
sqlc/: db.sql  schema.sql
src/: Dockerfile  boggart.py
src/config/: keys.yaml  staging.yaml
src/discordgpt/: Database.py  ImageGenerator.py  Logger.py  __init__.py
